--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/multer": "^1.4.12",
+    "@types/pdfkit": "^0.13.5",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cheerio": "^1.0.0",
@@ -21,8 +23,11 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.6.2",
+    "multer": "1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "openai": "^4.61.1",
+    "pdfkit": "^0.15.0",
+    "pdfmake": "^0.2.12",
     "puppeteer": "^23.3.1"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.4",
+    "@types/pdfmake": "^0.2.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
