--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/multer": "^1.4.12",
     "@types/pdfkit": "^0.13.5",
+    "asposeslidescloud": "^24.8.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cheerio": "^1.0.0",
@@ -29,6 +30,7 @@
     "openai": "^4.61.1",
     "pdfkit": "^0.15.0",
     "pdfmake": "^0.2.12",
+    "pptxgenjs": "^3.12.0",
     "puppeteer": "^23.3.1"
   },
   "devDependencies": {
