--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.14.1",
+    "googleapis": "^144.0.0",
     "groq-sdk": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
