--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/gridfs-stream": "^0.5.39",
     "@types/multer": "^1.4.12",
     "@types/pdfkit": "^0.13.5",
     "asposeslidescloud": "^24.8.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "bull": "^4.16.3",
     "cheerio": "^1.0.0",
     "cohere-ai": "^7.13.1",
     "cors": "^2.8.5",
@@ -23,17 +25,21 @@
     "express": "^4.19.2",
     "google-auth-library": "^9.14.1",
     "googleapis": "^144.0.0",
+    "gridfs-stream": "^1.1.1",
     "groq-sdk": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "multer": "1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
     "openai": "^4.61.1",
     "pdfkit": "^0.15.0",
     "pdfmake": "^0.2.12",
     "pptxgenjs": "^3.12.0",
-    "puppeteer": "^23.3.1"
+    "puppeteer": "^23.3.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
